updated readme file for performance learning